# Tourist-Trip_Recommender

./: README.md  docker-compose.yml
backend/: .env  Dockerfile  config.py  databases.py  docker-compose.yml  docker-entrypoint.sh  file.txt  helpers.py  main.py  models.py  osm_fetcher.py  pyproject.toml  schemas.py
backend/routes/: places.py
frontend/: Dockerfile  index.html  package.json  sample.txt  testing.txt  tsconfig.json
frontend/src/: App.tsx
frontend/src/api/: places.ts
frontend/src/components/: FilterForm.tsx  ListView.tsx  LoadingOverlay.tsx  MapView.tsx  SidebarInfo.tsx
frontend/src/types/: index.ts
